--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,23 @@
 </head>
 <body>
  <p>Get your greeting <a href="/greeting">here</a></p>
+  <!-- Cabecera -->
+  <header>
+ 
+    <h1>Este es mi Blog </h1>
+    </header>
+    <!-- Contenido -->
+    <section> 
+   <b>Libros</b>
+    <p>(Contenido)</p>
+   </section>
+    <section> 
+   <b>Películas</b>
+    <p>(Contenido)</p>
+    </section> 
+    <!-- Pie de pagina -->
+    <footer>
+    (c) Aspectos Juridicos
+    </footer>
 </body>
 </html>
