--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
     <!-- Contenido -->
     <section> 
    <b>Libros</b>
-    <p>(Contenido sobre libros)</p>
+    <p>(Contenido sobre libros v2)</p>
    </section>
     <section> 
    <b>Películas</b>
